# LicenseCM-SDK

./: README.md
cpp/examples/: main.cpp
cpp/include/: licensecm.hpp
csharp/: LicenseCM.cs
delphi/: LicenseCM.pas
delphi/Example/: LicenseCMExample.dpr
go/: go.mod  licensecm.go
go/example/: main.go
java/: pom.xml
java/src/main/java/com/licensecm/: LicenseCM.java
kotlin/: build.gradle.kts
kotlin/src/main/kotlin/com/licensecm/: LicenseCM.kt
lua/: licensecm.lua
nodejs/: index.js  package.json
php/: composer.json
php/src/: LicenseCM.php
python/: licensecm.py
ruby/: licensecm.gemspec
ruby/lib/: licensecm.rb
rust/: Cargo.toml
rust/examples/: basic.rs
rust/src/: lib.rs
swift/: Package.swift
swift/Sources/LicenseCM/: LicenseCM.swift
