[package]
name = "licensecm"
version = "1.0.0"
edition = "2021"
description = "Rust SDK for LicenseCM License Management System"
license = "MIT"
rust-version = "1.70"

[dependencies]
aes-gcm = "0.10"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
hostname = "0.3"
num_cpus = "1.15"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
